@@ -1,3 +1,8 @@
+2010-09-19  Noel O'Boyle
+
+	* src/formats/inchiformat.cpp: Handle atoms with tet chirality due to
+	lone pairs.
+
 2010-09-19  Chris Morley
 
 	* src/ops/opisomorph.cpp: As requested by Douglas Houston, -s option
